Configure maven structure